Fix header alignment

--- a/common/common.scss
+++ b/common/common.scss
@@ -89,6 +89,7 @@ body {
     #welcome-message {
         max-width: 1440px;
         text-align: center;
+        margin: auto;
     }
 
     #welcome-text {
